Added show page for dogs

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,1 +1,5 @@
-<%= current_dog.attributes %>
+<div>
+  <h1><%= current_dog.name %></h1><br />
+  <p><%= current_dog.description %></p><br />
+  <i><%= current_dog.address %></i><br />
+</div>
